@@ -1,12 +1,9 @@
 package br.com.ada.modulo2.trabalho1.utilidades;
 
-
 import br.com.ada.modulo2.trabalho1.Professor;
 import br.com.ada.modulo2.trabalho1.Turma;
 
-import java.awt.dnd.DragGestureRecognizer;
 import java.util.ArrayList;
-import java.util.stream.Collectors;
 
 /**
  * Classe que lida com chamadas de métodos
@@ -17,12 +14,17 @@ public class Menu {
 
     private static final String[] OPCOES1 =
             {"1 - Cadastrar Professor", "2 - Cadastrar Aluno",
-            "3 - Lista de Professores", "4 - Lista de Alunos",
-            "5 - Criar Turma", "6 - Lista de Turmas", "7 - Começar Aula" ,"8 - Imprimir Professor" , "9 - Sair"};
+            "3 - Cadastrar Turma", "4 - Lista de Professores",
+            "5 - Lista de Alunos", "6 - Lista de Turmas", "7 - Iniciar Aula" ,"8 - Sair"};
 
+    private Menu() {}
+
+    public static int menuInicial() {
+        return receberInt(OPCOES1);
+    }
 
     private static String[] opcoesDeProfessores(ArrayList<Professor> professores) {
-        return professores.stream().map(Professor::toString).collect(Collectors.toList()).toArray(String[]::new);
+        return professores.stream().map(Professor::toString).toList().toArray(String[]::new);
     }
 
     public static Professor menuDeProfessores(){
@@ -31,29 +33,25 @@ public class Menu {
     }
 
     private static String[] opcoesDeTurmas(ArrayList<Turma> turmas) {
-        return turmas.stream().map(turma -> turma.getID() + " | Turma " + turma.getNome() ).collect(Collectors.toList()).toArray(String[]::new);
+        return turmas.stream().map(turma -> turma.getID() + " | Turma " + turma.getNome() ).toList().toArray(String[]::new);
     }
 
     public static Turma menuDeTurmas(ArrayList<Turma> turmas) {
         return Turma.ID(receberInt(opcoesDeTurmas(turmas)));
     }
 
-    public static void darAula() {
+    public static void iniciarAula() {
+        Impressora.imprimirMensagemFormatada("Selecione um(a) professor(a) abaixo:");
         var professor = menuDeProfessores();
         var turmas = professor.getTurmas();
         if (!turmas.isEmpty()) {
+            Impressora.imprimirMensagemFormatada("Selecione uma turma abaixo:");
             professor.darAula(menuDeTurmas(turmas));
         } else {
             Impressora.imprimirMensagemFormatada(professor.getNome() + " não está alocado a nenhuma turma");
         }
     }
 
-
-    private Menu() {}
-
-    public static int menuInicial() {
-        return receberInt(OPCOES1);
-    }
 
     /**
      * Imprime um menu e retorna valor inserido pelo usuário.
